src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_6.snap
---
source: src/parser/test.rs
description: "{1:2; 5;"
expression: result
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected '}' not found."), (0,7)->(0,8)),
]

===================================

{1:2; 5;
       ^ [Error] SyntaxError: Expected '}' not found.
